--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
     "lodash.topairs": "^4.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-scripts": "1.0.17",
-    "redux": "^3.7.2",
-    "redux-actions": "^2.2.1",
-    "reselect": "^3.0.1"
+    "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
