agrego algo de mobx

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lodash.keys": "^4.2.0",
     "lodash.map": "^4.6.0",
     "lodash.topairs": "^4.3.0",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
