--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1"
+    "babel-preset-stage-1": "^6.24.1",
+    "mobx-react-devtools": "^4.2.15"
   }
 }
